src/test/ui/dst/dst-object-from-unsized-type.stderr
error[E0277]: the size for values of type `T` cannot be known at compilation time
  --> $DIR/dst-object-from-unsized-type.rs:8:23
   |
LL |     let u: &dyn Foo = t;
   |                       ^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `T`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = help: consider adding a `where T: std::marker::Sized` bound
   = note: required for the cast to the object type `dyn Foo`

error[E0277]: the size for values of type `T` cannot be known at compilation time
  --> $DIR/dst-object-from-unsized-type.rs:13:23
   |
LL |     let v: &dyn Foo = t as &dyn Foo;
   |                       ^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `T`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = help: consider adding a `where T: std::marker::Sized` bound
   = note: required for the cast to the object type `dyn Foo`

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/dst-object-from-unsized-type.rs:18:28
   |
LL |     let _: &[&dyn Foo] = &["hi"];
   |                            ^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `str`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: required for the cast to the object type `dyn Foo`

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/dst-object-from-unsized-type.rs:23:23
   |
LL |     let _: &dyn Foo = x as &dyn Foo;
   |                       ^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `[u8]`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: required for the cast to the object type `dyn Foo`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
